--- a/src/input.scss
+++ b/src/input.scss
@@ -1,55 +1,14 @@
-@use 'header';
+@import 'https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap';
 
-// Importar Materialize Variables y Componentes
-@import '../node_modules/materialize-css/sass/components/_color-variables.scss';
-@import '../node_modules/materialize-css/sass/components/_variables.scss';
-@import '../node_modules/materialize-css/sass/materialize.scss';
-
-// Colores
-$primary-color: material-color("teal", "600");
-$secondary-color: material-color("orange", "500");
-$background-color: material-color("grey", "100");
-$text-color: material-color("grey", "900");
-$highlight-color: material-color("lime", "400");
-$error-color: material-color("red", "600");
-
-// Sobrescribir variables específicas de Materialize
-$primary-text-color: $text-color;
-$secondary-text-color: material-color("grey", "600");
-$link-color: $primary-color;
-$input-border-color: material-color("deep-orange", "300");
-
-// Personalizaciones para tarjetas y botones
-$card-background-color: $background-color;
-$card-border-radius: 8px;
-$card-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-$button-background-color: $primary-color;
-$button-hover-background-color: material-color("deep-orange", "700");
-$button-text-color: #fff;
-
-// Estilos para el navbar
-$navbar-background-color: $primary-color;
-$navbar-text-color: $text-color;
-
-// Tipografías
-$font-family: 'Roboto', sans-serif;
-$header-font: 'Montserrat', sans-serif;
-$base-font-size: 16px;
-$heading-size: 32px;
-
-// Tamaños globales
-$border-radius: 5px;
-$container-padding: 20px;
-
-// Sombras
-$box-shadow-light: 0 2px 4px rgba(0, 0, 0, 0.1);
-$box-shadow-heavy: 0 4px 8px rgba(0, 0, 0, 0.2);
-
-// Variables específicas del tema
-$button-bg-color: $primary-color;
-$button-text-color: #fff;
-
+$background-color: #212121;
+$text-color: #fafafa;
+$navbar-background: #3f51b5;
+$button-background: #7986cb;
+$collection-color: #c5cae9;
+$label-color: #3949ab;
+$footer-background: #536dfe;
+$card-background: #8c9eff;
+$icons-color: #3d5afe;
 
 %font-family {
     font-family: "Afacad Flux", sans-serif;
@@ -61,12 +20,26 @@ $button-text-color: #fff;
 %flex-center {
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  gap: 25px;
+  text-align: center;
 }
 
 %swiper-styles {
     width: 100%;
-    height: auto;
+    border-radius: 20px;
+    box-shadow: rgba(20, 20, 20, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+%answers-styles {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bolder; 
 }
 
 body {
@@ -77,75 +50,83 @@ body {
   color: $text-color;
 }
 
-h1, h2, h3 {
-    font-family: $header-font;
-    color: $primary-color;
-  }
-  
-  button {
-    background-color: $button-bg-color;
-    color: $button-text-color;
-    border-radius: $border-radius;
-    box-shadow: $box-shadow-light;
-  
-    &:hover {
-      box-shadow: $box-shadow-heavy;
-    }
-  }
+.nav {
+  background-color: $navbar-background;
+}
 
-// Navbar personalizado
-nav {
-    background-color: $navbar-background-color;
-  
-    a {
-      color: $navbar-text-color !important;
-    }
-  }
+h1, h2, h3, h4, h5 {
+  color: $text-color;
+}
 
-  // Botones personalizados
 .btn {
-    background-color: $button-background-color;
-    color: $button-text-color;
-  
-    &:hover {
-      background-color: $button-hover-background-color;
-    }
+  background-color: $button-background !important;
+}
+
+#form-section {
+  padding: 36px;
+}
+
+.collection-container {
+  h4 {
+    margin-bottom: 20px;
+    color: $collection-color;
+    font-weight: bold;
   }
-  
-  // Tarjetas personalizadas
-  .card {
-    background-color: $card-background-color;
-    border-radius: $card-border-radius;
-    box-shadow: $card-box-shadow;
+  .collection {
+    padding: 20px;
   }
-  
-  // Inputs con bordes y colores personalizados
+  .collection-item {
+    background-color: $background-color !important;
+    color: $text-color;
+  }
+}
+
+#form {
+
+  color: $text-color;
+  margin-top: 20px; 
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px;
   input {
-    border-color: $input-border-color;
-  
-    &:focus {
-      border-bottom-color: $primary-color !important;
-      box-shadow: 0 1px 0 0 $primary-color !important;
-    }
-  
-    &.invalid {
-      border-bottom-color: $error-color !important;
-      box-shadow: 0 1px 0 0 $error-color !important;
-    }
+    color: $text-color;
   }
-  
-  // Iconos resaltados
-  .material-icons {
-    color: $highlight-color;
+  label {
+    color: $label-color;
   }
-  
-  // Barra de progreso personalizada
-  .progress {
-    background-color: $secondary-color;
-  }
+}
 
 .swiper {
     @extend %swiper-styles;
+}
+
+.card {
+  padding: 50px;
+  background-color: $card-background !important;
+  color: $text-color;
+  
+  .card-content {
+    text-align: center;
+    font-size: large;
+
+    .card-title {
+      font-size: 30px;
+    }
+  }
+
+  .card-action {
+    @extend %answers-styles;
+    
+    a {
+      padding: 20px;
+      border-radius: 20px;
+      color: #7986cb !important;
+      background-color: #e8eaf6;
+    }
+    a:hover {
+      background-color: #212121;
+    }
+   }
+
 }
 
 #score {
@@ -154,7 +135,8 @@ nav {
     font-weight: bolder;
     padding: 10px 20px 30px;
     text-align: center;
-    margin-top: 10px
+    margin-top: 10px;
+    background-color: #8c9eff
 }
 
 .flex-elements {
@@ -165,12 +147,28 @@ nav {
     min-height: 100vh;
 }
 
-.icon-block {
-    padding: 0 15px;
+.card-image {
+  width: 100%;
+  height: 400px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.card-reveal {
+  background-color: #212121 !important;
+  .section {
+    background-color: #7986cb !important;
   }
-  .icon-block .material-icons {
-      font-size: inherit;
+  .container {
+    h5 {
+      font-size: 30px;
+    }
   }
+}
+
+.material-icons {
+  color: $icons-color;
+}
 
   .animate__animated {
     transition: all 0.3s ease-in-out;
@@ -184,9 +182,7 @@ nav {
     transform: scale(1.2);
   }
 
-  button, .btn-large {
-    transition: box-shadow 0.3s ease;
-    &:hover {
-      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-    }
-}
+  footer {
+    background-color: $footer-background !important;
+    color: $text-color !important;
+  }
